[gd_scene load_steps=5 format=3 uid="uid://5pgojha1nxq3"]

[ext_resource type="Script" path="res://scenes/ui/fish_reeling_scene.gd" id="1_6doul"]
[ext_resource type="Resource" uid="uid://dqvg82tmdvvr3" path="res://scenes/entities/fish/Lungfish.tres" id="2_hkqx1"]
[ext_resource type="Texture2D" uid="uid://ryj8cumeb5bg" path="res://assets/fish.png" id="2_i7pv4"]
[ext_resource type="FontFile" uid="uid://oev3rdf5s6wf" path="res://assets/dogicapixel.otf" id="4_ylwgf"]

[node name="FishReelingScene" type="Node2D"]
script = ExtResource("1_6doul")
fish = ExtResource("2_hkqx1")

[node name="Fish" type="Sprite2D" parent="."]
position = Vector2(83, 71)
texture = ExtResource("2_i7pv4")
hframes = 2
vframes = 3
frame = 4

[node name="LineTension" type="Label" parent="."]
offset_top = 110.0
offset_right = 42.0
offset_bottom = 133.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("4_ylwgf")
text = "0"

[node name="Distance" type="Label" parent="."]
offset_top = 128.0
offset_right = 42.0
offset_bottom = 151.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("4_ylwgf")
text = "0"

[node name="Stamina" type="Label" parent="."]
offset_left = 33.0
offset_top = 128.0
offset_right = 75.0
offset_bottom = 151.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("4_ylwgf")
text = "0"

[node name="state" type="Label" parent="."]
offset_left = 79.0
offset_top = 42.0
offset_right = 121.0
offset_bottom = 65.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("4_ylwgf")
text = "0"

[node name="FlailTimer" type="Timer" parent="."]
one_shot = true

[node name="StruggleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FlailTimer" to="." method="_on_flail_timer_timeout"]
[connection signal="timeout" from="StruggleTimer" to="." method="_on_timer_timeout"]
